force-app/main/default/objects/CC_DataSyncObjectMapping__mdt/CC_DataSyncObjectMapping__mdt.object-meta.xml
<CustomObject>
    <description>CC_DataSyncObjectMapping</description>
    <label>DataSyncObjectMapping</label>
    <pluralLabel>CC_DataSyncObjectMapping</pluralLabel>
</CustomObject>