force-app/main/default/objects/CC_DataSyncObjectMapping__mdt/fields/CC_Relationship_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Relationship_Api_Name__c</fullName>
    <description>Relationship Api Name (API name of relationship field between source and target object)</description>
    <inlineHelpText>API name of relationship field between source and target object.</inlineHelpText>
    <label>Relationship Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>