force-app/main/default/objects/CC_DataSyncObjectMapping__mdt/fields/CC_Source_Object__c.field-meta.xml
<CustomField>
    <fullName>CC_Source_Object__c</fullName>
    <description>API name of source object for data sync.</description>
    <inlineHelpText>API name of source object</inlineHelpText>
    <label>Source Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>