force-app/main/default/objects/CC_DataSyncObjectMapping__mdt/fields/CC_Sync_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CC_Sync_Identifier__c</fullName>
    <description>API Name of (date time) field present on target object for storing last sync date/time</description>
    <inlineHelpText>API Name of (date time) field present on target object for storing last sync date/time</inlineHelpText>
    <label>Sync Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>