force-app/main/default/objects/CC_DataSyncObjectMapping__mdt/fields/CC_Target_Object__c.field-meta.xml
<CustomField>
    <fullName>CC_Target_Object__c</fullName>
    <description>API Name of target object for data sync.</description>
    <inlineHelpText>API Name of target object</inlineHelpText>
    <label>Target Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>