force-app/main/default/objects/CC_DataSyncObjectMapping__mdt/fields/Relationship_Field_in_Apex__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field_in_Apex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Relationship Field are mentioned in Apex</description>
    <inlineHelpText>If the Relationship Field are mentioned in Apex</inlineHelpText>
    <label>Relationship Field in Apex</label>
    <type>Checkbox</type>
</CustomField>